--- a/DESCRIPTION
+++ b/DESCRIPTION
@@ -15,7 +15,9 @@ LazyData: true
 Roxygen: list(markdown = TRUE)
 RoxygenNote: 7.1.0
 Imports: 
-    magrittr
+    dplyr,
+    magrittr,
+    reshape2
 Suggests: 
     knitr,
     rmarkdown
