create rpt pca and structural analysis
Criadas as funções que estimam o coeficiente de repetibilidade pelos métodos de componentes principais e análise estrutural, conforme apresentado por Cruz et al. (1997).

--- a/DESCRIPTION
+++ b/DESCRIPTION
@@ -1,6 +1,6 @@
 Package: INeuICC
 Title: Coeficiente de Correla\enc{çã}{cao} Intra-Classe
-Version: 0.0.0.9001
+Version: 0.0.1.0
 Authors@R: 
     person(given = "Ismael",
            family = "Neu",
@@ -22,3 +22,5 @@ Suggests:
     knitr,
     rmarkdown
 VignetteBuilder: knitr
+Depends: 
+    R (>= 2.10)
